4. PostController.updatePost. Редактирование вакансии. [#504850]

--- a/example1.html
+++ b/example1.html
@@ -9,16 +9,25 @@
           font-family: arial;
           background: beige;
        }
-   </style>
+
+    </style>
 </head>
 <body>
 <table>
     <thead>
     <tr>
-        <th><div class = "types">Компания</div></th>
-        <th><div class = "types">Год основания</div></th>
-        <th><div class = "types">Число сотрудников</div></th>
-        <th><div class = "types">Средняя годовая зарплата, $</div></th>
+        <th>
+            <div class="types">Компания</div>
+        </th>
+        <th>
+            <div class="types">Год основания</div>
+        </th>
+        <th>
+            <div class="types">Число сотрудников</div>
+        </th>
+        <th>
+            <div class="types">Средняя годовая зарплата, $</div>
+        </th>
     </tr>
     </thead>
     <tbody>
